# StarMapr

./: .env.example  .gitignore  00_run_integration_test.py  01_run_headshot_detection.py  02_run_actor_training.py  03_run_training_pipeline.py  04_run_testing_pipeline.py  05_run_pipeline_steps.py  11_remove_dupe_training_images.py  14_cluster_and_keep_largest.py  15_compute_average_embeddings.py  30_download_video.py  32_extract_frame_faces.py  33_extract_video_headshots.py  92_print_pkl.py  CLAUDE.md  README.md  compute_average_embeddings.py  download_actor_images.py  download_celebrity_images.py  download_video.py  eval_star_detection.py  extract_frame_faces.py  extract_video_frames.py  extract_video_headshots.py  extract_video_thumbnail.py  pyproject.toml  remove_bad_training_images.py  remove_dupe_training_images.py  remove_face_outliers.py  requirements.in  requirements.txt  run_actor_training.py  run_celebrity_training.py  run_headshot_detection.py  run_integration_test.py  run_pipeline.py  run_pipeline_steps.py  run_testing_pipeline.py  run_training_pipeline.py  (+2 more)
utilities/: __init__.py  print_utils.py
